[package]
name = "mcpat-sys"
version = "0.8.0"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides bindings to McPAT."
documentation = "https://markov-chain.github.io/mcpat-sys"
homepage = "https://github.com/markov-chain/mcpat-sys"
repository = "https://github.com/markov-chain/mcpat-sys"
build = "build.rs"
links = "mcpat"

[features]
caching = ["hiredis-sys"]

[dependencies]
libc = "0.2"

[dependencies.hiredis-sys]
version = "0.4"
optional = true
